--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native-stack": "^7.9.0",
     "@reduxjs/toolkit": "^2.11.2",
     "expo": "~54.0.31",
+    "expo-font": "~13.0.1",
+    "expo-splash-screen": "~0.29.15",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
