--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~54.0.31",
     "expo-font": "~13.0.1",
     "expo-splash-screen": "~0.29.15",
+    "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
